// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.peer-budget-approval-persistence.acceptance given: [journey] approval persists across hash changes when: [t0] artifact created, first review (budget 1/2) then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: mock-reviewer (l1, 1/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r001._.given.by_peer.mock-reviewer.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r001._.taken.by_self.mock-reviewer.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   └─ r1: mock-reviewer (l1, 1/2)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r001._.given.by_peer.mock-reviewer.md
      │       └─ taken: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r001._.taken.by_self.mock-reviewer.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-approval-persistence.acceptance given: [journey] approval persists across hash changes when: [t1] second attempt, budget exhausts (2/2) then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: mock-reviewer (l1, 2/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.mock-reviewer.md
   │   └─ taken: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.mock-reviewer.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   └─ r1: mock-reviewer (l1, 2/2)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.mock-reviewer.md
      │       └─ taken: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.mock-reviewer.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-approval-persistence.acceptance given: [journey] approval persists across hash changes when: [t2] human approves despite exhausted budget then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.execute
   └─ ✓ approved
"
`;

exports[`driver.route.peer-budget-approval-persistence.acceptance given: [journey] approval persists across hash changes when: [t3] artifact hash changes after approval then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: mock-reviewer (l1, 2/2)
   │   ├─ exhausted, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.mock-reviewer.md
   │   └─ taken: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.mock-reviewer.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ src/**/*.ts
   │  ├─ reviews
   │  │   └─ r1: mock-reviewer (l1, 2/2)
   │  │       ├─ exhausted, cached
   │  │       ├─ 1 blocker 🔴
   │  │       ├─ 0 nitpicks ✓
   │  │       ├─ given: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.mock-reviewer.md
   │  │       └─ taken: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.mock-reviewer.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.peer-budget-approval-persistence.acceptance given: [journey] approval persists across hash changes when: [t4] another artifact change, approval still persists then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: mock-reviewer (l1, 2/2)
   │   ├─ exhausted, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.mock-reviewer.md
   │   └─ taken: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.mock-reviewer.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ src/**/*.ts
   │  ├─ reviews
   │  │   └─ r1: mock-reviewer (l1, 2/2)
   │  │       ├─ exhausted, cached
   │  │       ├─ 1 blocker 🔴
   │  │       ├─ 0 nitpicks ✓
   │  │       ├─ given: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.mock-reviewer.md
   │  │       └─ taken: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.mock-reviewer.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
